updated java version and dependencies