@@ -1,21 +1,19 @@
 package es.predictia.rserver;
 
+import java.time.LocalDateTime;
+import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
+import java.util.Optional;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
+import java.util.stream.Collectors;
 
-import org.joda.time.DateTime;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
+import lombok.extern.slf4j.Slf4j;
 
-import com.google.common.base.Function;
-import com.google.common.base.Optional;
-import com.google.common.collect.FluentIterable;
-import com.google.common.collect.Lists;
-
+@Slf4j
 public class RSessionFactory  {
 
 	private transient Collection<SessionTasks> sessionTasks = Collections.synchronizedSet(new HashSet<SessionTasks>());
@@ -26,25 +24,24 @@ public class RSessionFactory  {
 		boolean newRequest = !sessionTasks.contains(tasks);
 		RSessionRequest sessionRequest = tasks.getSessionRequest();
 		if(newRequest){
-			LOGGER.info("Received session request for "+ sessionRequest.getRequestedResources()  + " resources: " + sessionRequest);
+			log.info("Received session request for "+ sessionRequest.getRequestedResources()  + " resources: " + sessionRequest);
 			sessionTasks.add(tasks);
 		}
-		LOGGER.debug("Searching for available instances");
+		log.debug("Searching for available instances");
 		for(RServerInstance instance : availableInstances){
-			long usedResources = sum(FluentIterable
-				.from(sessionTasks)
-				.transform(SessionTasks.TO_REQUEST_FUNCTION)
+			long usedResources = sessionTasks.stream()
+				.map(SessionTasks.TO_REQUEST_FUNCTION)
 				.filter(RSessionRequest.predicateForInstance(instance))
-				.transform(RSessionRequest.TO_RESOURCES_FUNCTION)
-			);
+				.mapToInt(RSessionRequest::getRequestedResources)
+				.sum();
 			if(instance.getResources() >= (usedResources + sessionRequest.getRequestedResources())){
-				LOGGER.info("Found suitable instance for request " + sessionRequest + ": " + instance.getUrl());
+				log.info("Found suitable instance for request " + sessionRequest + ": " + instance.getUrl());
 				sessionRequest.setInstance(instance);
-				sessionRequest.setAcceptedTime(new DateTime());
+				sessionRequest.setAcceptedTime(LocalDateTime.now());
 				return Optional.of(instance);
 			}			
 		}
-		return Optional.absent();
+		return Optional.empty();
 	}
 
 	
@@ -55,26 +52,17 @@ public class RSessionFactory  {
 	}
 	
 	private void deleteOldSessions(){
-		Collection<SessionTasks> oldSessions = FluentIterable
-			.from(sessionTasks)
+		Collection<SessionTasks> oldSessions = sessionTasks.stream()
 			.filter(SessionTasks.DONE_PREDICATE)
-			.toList();
+			.collect(Collectors.toList());
 		if(oldSessions.isEmpty()){
 			return;
 		}
-		LOGGER.debug("Cleaning old sessions");
+		log.debug("Cleaning old sessions");
 		sessionTasks.removeAll(oldSessions);
 	}
 	
-	private static long sum(Iterable<? extends Number> els){
-		long res = 0;
-		for(Number el : els){
-			res += el.longValue();
-		}
-		return res;
-	}
-	
-	private List<RServerInstance> availableInstances = Lists.newArrayList(new RServerInstance());
+	private List<RServerInstance> availableInstances = Arrays.asList(RServerInstance.builder().build());
 	
 	public void setAvailableInstances(List<RServerInstance> availableInstances) {
 		this.availableInstances = availableInstances;
@@ -90,19 +78,14 @@ public class RSessionFactory  {
 	}
 
 	private synchronized ExecutorService createDefaultService() {
-		long totalNumberOfResources = sum(FluentIterable.from(availableInstances).transform(new Function<RServerInstance, Integer>() {
-			@Override
-			public Integer apply(RServerInstance input) {
-				return input.getResources();
-			}
-		}));
+		long totalNumberOfResources = availableInstances.stream()
+			.mapToLong(RServerInstance::getResources)
+			.sum();
 		return Executors.newFixedThreadPool(Long.valueOf(totalNumberOfResources).intValue() + 4);
 	}
 	
 	public synchronized void setExecutorService(ExecutorService executorService) {
 		this.executorService = executorService;
 	}
-	
-	private static final Logger LOGGER = LoggerFactory.getLogger(RSessionFactory.class);
 
 }
